--- a/project-133/src/components/Hero.css
+++ b/project-133/src/components/Hero.css
@@ -18,13 +18,14 @@
 }
 
 .hero-background img {
-  width: 100%;
-  height: 95%;
+  width: 1550px; /* Change this value to your desired width, e.g., 80% or 1000px */
+  height: 650px; /* Set your desired height here */
   object-fit: cover;
   object-position: center;
-  max-width: 1440px;
+  
   margin: 0 auto;
   display: block;
+  object-position: center;
   
   object-fit: cover; 
 }
@@ -33,12 +34,12 @@
   position: relative;
   z-index: 2;
   max-width: 1440px;
-  margin: 0 auto;
+  
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  padding: 0 20px;
+  
+  padding: 60px 30px 30px 900px;
 }
 
 .hero-text {
