--- a/project-133/src/App.css
+++ b/project-133/src/App.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Segoe UI', sans-serif;
   background-color: #f7f7f7;
   color: #333;
+  width: 100%;
 }
 a {
   text-decoration: none;
