--- a/project-133/src/components/Hero.css
+++ b/project-133/src/components/Hero.css
@@ -1,9 +1,15 @@
+
+
+
 .hero-container {
   width: 100%;
-  height: 716.83px;
-  position: relative;
-  overflow: hidden;
-  margin: 0 auto;
+  padding-top: 30px;
+  padding-right: 30px
+  ; /* Adjusted to accommodate the background image */
+
+  
+  
+  
 }
 
 .hero-background {
@@ -18,8 +24,8 @@
 }
 
 .hero-background img {
-  width: 1550px; /* Change this value to your desired width, e.g., 80% or 1000px */
-  height: 650px; /* Set your desired height here */
+  width: 1520px; /* Change this value to your desired width, e.g., 80% or 1000px */
+  height: 700px; /* Set your desired height here */
   object-fit: cover;
   object-position: center;
   
@@ -34,12 +40,12 @@
   position: relative;
   z-index: 2;
   max-width: 1440px;
-  
+  margin: 0 auto;
   height: 100%;
   display: flex;
   align-items: center;
   
-  padding: 60px 30px 30px 900px;
+  padding: 60px 30px 50px 900px;
 }
 
 .hero-text {
