--- a/project-133/src/components/BrowseRange.css
+++ b/project-133/src/components/BrowseRange.css
@@ -26,15 +26,16 @@
 .category-grid {
   display: flex;
   justify-content: center;
-  gap: 30px;
+  gap: 70px;
   flex-wrap: wrap;
 }
 
 .category-card {
   flex: 0 1 calc(33.333% - 20px);
-  max-width: 380px;
+  max-width: 350px;
   cursor: pointer;
   transition: transform 0.3s ease;
+  width: 300px;
 }
 
 .category-card:hover {
