--- a/project-133/src/components/Roomlnspiration.css
+++ b/project-133/src/components/Roomlnspiration.css
@@ -65,17 +65,19 @@
 }
 
 .slide img {
-  width: 100%;
-  height: 600px;
+  width: 80%;
+  height: 400px;
   object-fit: cover;
   border-radius: 10px;
+  margin: 0 auto;
+  display: block;
 }
 
 .slide-content {
   position: absolute;
   bottom: 0;
-  left: 0;
-  right: 0;
+  left: 10%;
+  right: 10%;
   background: white;
   padding: 24px;
   border-radius: 0 0 10px 10px;
